# FluidAI

./: LICENSE  README.md  pyproject.toml
docs/: fluid_api.ipynb
notebooks/: fluid_api.ipynb
